<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="horizontal"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:weightSum="4"
			  android:id="@+id/passwordTypeLine"
			  android:visibility="gone"
	>


	<CheckBox
		android:text="@string/passwordUpper"
		android:layout_width="0dp"
		android:layout_weight="1"
		android:layout_height="wrap_content"
		android:minHeight="48dp"
		android:checked="true"
		android:id="@+id/passwordUpperCheckBox"/>

	<CheckBox
		android:text="@string/passwordLower"
		android:layout_width="0dp"
		android:layout_weight="1"
		android:layout_height="wrap_content"
		android:minHeight="48dp"
		android:checked="true"
		android:id="@+id/passwordLowerCheckBox"/>

	<CheckBox
		android:text="@string/passwordDigit"
		android:layout_width="0dp"
		android:layout_weight="1"
		android:layout_height="wrap_content"
		android:minHeight="48dp"
		android:checked="true"
		android:id="@+id/passwordDigitCheckBox"/>

	<CheckBox
		android:text="@string/passwordSpec"
		android:layout_width="0dp"
		android:layout_weight="1"
		android:layout_height="wrap_content"
		android:minHeight="48dp"
		android:checked="true"
		android:id="@+id/passwordSpecCheckBox"/>

</LinearLayout>