<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_random"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.kos.grandrandom.RandomActivity">


	<androidx.cardview.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="252dp"
		android:layout_alignParentBottom="true"
		android:layout_alignParentStart="true"

		android:layout_margin="4dp"
		app:cardCornerRadius="8dp">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<androidx.appcompat.widget.Toolbar
				android:id="@+id/resultMenu"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_alignParentEnd="true"
				android:layout_gravity="bottom|end"
				android:orientation="horizontal">

				<ImageButton
					android:id="@+id/copyBtn"
					style="@style/Base.Widget.AppCompat.Toolbar.Button.Navigation"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_content_copy_black_24dp"
					>

				</ImageButton>

				<ImageButton
					android:id="@+id/shareBtn"
					style="@style/Base.Widget.AppCompat.Toolbar.Button.Navigation"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_share_black_24dp"
					/>
			</androidx.appcompat.widget.Toolbar>

			<TextView
				android:id="@+id/generateBtn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_gravity="bottom"
				android:layout_margin="8dp"
				android:background="?android:attr/selectableItemBackground"
				android:padding="12dp"
				android:text="@string/btnGenerate"
				android:textColor="@color/black"
				android:textSize="16sp"
				>
			</TextView>

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="8dp"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:layout_marginRight="8dp"
				android:layout_above="@+id/resultMenu"
				>

				<ScrollView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					>

					<TextView
						android:id="@+id/resultLabel"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="center_horizontal"
						android:textColor="@color/black"
						android:textIsSelectable="true"
						android:textSize="@dimen/grandRandomResult"
						tools:text="TextView"
						/>
				</ScrollView>
			</FrameLayout>


		</RelativeLayout>
	</androidx.cardview.widget.CardView>

	<LinearLayout
		android:id="@+id/tableLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_alignParentTop="true"
		android:layout_alignParentStart="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="2"
			>

			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/labelSymbolAmount"
				android:id="@+id/labelAmount"
				/>

			<EditText
				android:id="@+id/symbolAmountEdit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:ems="10"
				android:imeOptions="actionDone"
				android:inputType="number"
				android:maxLength="3"
				/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:id="@+id/diapazonLayout"
			android:weightSum="2"
			>

			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/diapazonValues"

				/>

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:weightSum="2"
				>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/diapazonValuesBegin"


					/>

				<EditText
					android:imeOptions="actionDone"
					android:id="@+id/diapazonBeginEdit"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="numberSigned"
					android:maxLength="9"
					/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/diapazonValuesEnd"


					/>

				<EditText
					android:imeOptions="actionDone"
					android:id="@+id/diapazonEndEdit"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:inputType="numberSigned"
					android:maxLength="9"
					/>
			</LinearLayout>


		</LinearLayout>

		<include layout="@layout/item_password_type"/>
	</LinearLayout>


</RelativeLayout>
